--- a/package.json
+++ b/package.json
@@ -10,24 +10,32 @@
     "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev",
     "build": "quasar build",
-    "postinstall": "quasar prepare"
+    "postinstall": "quasar prepare",
+    "generate-crud": "node node_modules/quasar-crud-yaj/commands/createCrud.cjs"
   },
   "dependencies": {
-    "axios": "^1.2.1",
-    "pinia": "^2.0.11",
     "@quasar/extras": "^1.16.4",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "axios": "^1.2.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
+    "pinia": "^2.0.11",
     "quasar": "^2.16.0",
+    "quasar-crud-yaj": "https://gitlab.com/yajtech/soci-crud-frontend.git",
+    "vite-plugin-tailwind": "^0.0.4",
     "vue": "^3.4.18",
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
     "@quasar/app-vite": "^2.0.0",
-    "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.14"
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^2.2.19"
   },
   "engines": {
     "node": "^28 || ^26 || ^24 || ^22 || ^20 || ^18",
     "npm": ">= 6.13.4",
-    "yarn": ">= 1.21.1"
+    "yarn": ">= 1.21.1",
+    "tailwindcss": "^2.2.19"
   }
 }
